--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  scroll-behavior: smooth;
+  text-decoration: none;
+}
+
+
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --text-color:#f5f5f5;
+  --hover-color:#12f7ff;
+  --bg-color:#250821;
+  --secon-bg-color:#292e33;
+  --big-font:2.5rem;
+  --norma-font:2rem;
+  --neo-box-shadown:0 0 .5rem #12f7ff;
+  --h2-font:3rem;
+  --font-neo-text-shadow:0 0 10px rgba(18,247,255,0.3),
+  0 0 20px rgba(18,247,255,0.3),
+  0 0 30px rgba(18,247,255,0.3),
+  0 0 40px rgba(18,247,255,0.3),
+  0 0 70px rgba(18,247,255,0.3),
+  0 0 80px rgba(18,247,255,0.3),
+  0 0 100px rgba(18,247,255,0.3),
+  0 0 150px rgba(18,247,255,0.3);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,7 +44,6 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
+  background: var(--bg-color);
 }
